On small screen extra white space fixed

--- a/css/style.css
+++ b/css/style.css
@@ -261,7 +261,6 @@ header li {
   align-items: center;
   width: 100%;
   height: 100%;
-  margin: 0px 20px 50px 20px;
 }
 
 .skillset a {
@@ -271,7 +270,7 @@ header li {
 
 .skillset h2 {
   margin: 0;
-  padding: 20px 20px 60px 20px;
+  padding: 20px 20px 40px 20px;
   color: rgb(179, 177, 177);
   width: 700px;
   line-height: 3rem;
